--- a/src/app/modules/books/wishlist/wishlist/wishlist-item/wishlist-item.component.html
+++ b/src/app/modules/books/wishlist/wishlist/wishlist-item/wishlist-item.component.html
@@ -9,7 +9,7 @@
     class="card__thumbnail"
   />
   <mat-card-actions>
-    <button mat-raised-button (click)="removeFromWishlist.emit(book)">
+    <button mat-raised-button (click)="removeClick()">
       <mat-icon color="danger">delete</mat-icon> Remove book from wishlist
     </button>
   </mat-card-actions>
